cluster/istio/networking/ingress-cluster-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress-cluster-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - jellyfin.cluster.netbird.selfhosted
    - mealie.cluster.netbird.selfhosted
    - forgejo.cluster.netbird.selfhosted
    - glance.cluster.netbird.selfhosted
    - searxng.cluster.netbird.selfhosted
    - dawarich.cluster.netbird.selfhosted
    - kiali.cluster.netbird.selfhosted
    - perses.cluster.netbird.selfhosted
    - vault.cluster.netbird.selfhosted
  selector:
    istio: ingress
